--- a/data-example/config.json
+++ b/data-example/config.json
@@ -19,6 +19,10 @@
         ]
     ],
     "googleEarthIndexes": [
-        [1, 2, 3]
+        {
+        	"altitude": 1,
+        	"latitude": 2,
+        	"longitude": 3
+        }
     ]
 }
