Added color selection to config for Google Earth.

--- a/data-example/config.json
+++ b/data-example/config.json
@@ -2,6 +2,7 @@
     "datasets": [
     	{
     		"name": "Rocket",
+    		"color": "DD000000",
     		"labels": [
 	            "Timestamp (ms)",
 	            "Altitude (m)",
