--- a/build.gradle
+++ b/build.gradle
@@ -24,4 +24,10 @@ dependencies {
 	implementation	'org.json:json:20210307'
 	implementation	'org.knowm.xchart:xchart:3.6.1'
 	implementation	'org.java-websocket:Java-WebSocket:1.5.1'
-} 
+
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+}
+
+test {
+	useJUnitPlatform()
+}
