Add ability to parse RSSI data and display it

--- a/data-example/config-hotfireTest.json
+++ b/data-example/config-hotfireTest.json
@@ -25,9 +25,11 @@
                 "Abort Burn",
                 "Max States"
         	],
-	        "timestampIndex": 0,
-	        "stateIndex": 1,
-            "seperator": ","
+            "indexes": {
+                "timestamp": 0,
+                "state": 1
+	        },
+            "separator": ","
         }
     ],
     "stateEvents": [
