Update hotfire config

--- a/data-example/config-hotfireTest.json
+++ b/data-example/config-hotfireTest.json
@@ -7,10 +7,12 @@
     		"labels": [
 	            "Timestamp (ms)",
                 "Current State",
-                "Valve 606",
-                "Valve 404",
-                "Valve 505",
-                "Log Status"
+				"Valve SV-01",
+				"Valve SV-02",
+				"Valve SBV01 (PWM)",
+				"Valve SBV02 (PWM)",
+				"Valve SBV03 (PWM)",
+				"Log Status"
         	],
         	"states": [
         		"Init",
