--- a/data-example/config-hotfireTest.json
+++ b/data-example/config-hotfireTest.json
@@ -40,7 +40,7 @@
     		"name": "Start Filling",
     		"data": 0,
     		"availableStates": [2, 9],
-    		"successStates": [3, 4, 5, 6, 7, 8, 9, 10]
+    		"successStates": [3, 4, 5, 6, 7, 8, 10]
     	},
     	{
     		"name": "Stop Filling",
@@ -52,7 +52,7 @@
     		"name": "Ignition",
     		"data": 2,
     		"availableStates": [4, 9],
-    		"successStates": [5, 6, 7, 8, 9, 10]
+    		"successStates": [5, 6, 7, 8, 10]
     	},
     	{
     		"name": "Final Venting",
