--- a/data-example/config-hotfireTest.json
+++ b/data-example/config-hotfireTest.json
@@ -76,7 +76,7 @@
 		{
 			"name": "Servo Control",
 			"data": 6,
-			"availableStates": [2, 3, 4, 5, 6, 7, 8, 9, 10],
+			"availableStates": [2, 3, 4, 5, 6, 7],
 			"successStates": [11]
 		}
 	]
