--- a/data-example/config-hotfireTest.json
+++ b/data-example/config-hotfireTest.json
@@ -7,11 +7,16 @@
 			"labels": [
 				"Timestamp (ms)",
 				"Current State",
-				"Valve SV-01 Filling",
-				"Valve SV-02",
-				"Valve SBV01 Main Valve",
-				"Valve SBV02 Fill Cart Venting",
-				"Valve SBV03 Pinhole Venting",
+				"Valve SV-01 Filling Target",
+				"Valve SV-02 Target",
+				"Valve SBV01 Main Valve Target",
+				"Valve SBV02 Fill Cart Venting Target",
+				"Valve SBV03 Pinhole Venting Target",
+				"Valve SV-01 Filling State",
+				"Valve SV-02 State",
+				"Valve SBV01 Main Valve State",
+				"Valve SBV02 Fill Cart Venting State",
+				"Valve SBV03 Pinhole Venting State",
 				"Log Status"
 			],
 			"states": [
