--- a/data-example/config-hotfireTest.json
+++ b/data-example/config-hotfireTest.json
@@ -103,6 +103,12 @@
 			"data": 9,
 			"availableStates": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],
 			"successStates": []
+		},
+		{
+			"name": "Restart Logs",
+			"data": 10,
+			"availableStates": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],
+			"successStates": []
 		}
 	]
 }
