Add new labels for sensor suite data

--- a/data-example/config-hotfireTest.json
+++ b/data-example/config-hotfireTest.json
@@ -17,6 +17,21 @@
 				"Valve Main Valve State",
 				"Valve Fill Cart Venting State",
 				"Valve Pinhole Venting State",
+				"SensorSuite Timestamp",
+				"MSP2 Transducer",
+				"Swagelock Transducer",
+				"Tank Transducer",
+				"Thrust Transducer",
+				"Digital Inputs",
+				"DAQ Sample Count",
+				"Temp 1",
+				"Temp 2",
+				"Temp 3",
+				"Temp 4",
+				"Temp 5",
+				"Temp 6",
+				"Temp 7",
+				"Temp 8",
 				"Log Status",
 				"Temperature"
 			],
