--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,19 @@ repositories {
 	mavenCentral()
 }
 
-
-
-
+jar {
+	duplicatesStrategy = 'exclude'
+	manifest {
+		exclude  'META-INF/*'
+		attributes (
+			'Main-Class': 'uorocketry.basestation.Main'
+		)
+	}
+	dependsOn configurations.runtimeClasspath
+	from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
 
 dependencies {
 	implementation	'com.fazecast:jSerialComm:2.6.2'
