--- a/data-example/config-hotfireTest.json
+++ b/data-example/config-hotfireTest.json
@@ -8,15 +8,16 @@
 				"Timestamp (ms)",
 				"Current State",
 				"Heater Target",
-				"Valve Filling Target",
-				"Valve Main Valve Target",
-				"Valve Fill Cart Venting Target",
-				"Valve Pinhole Venting Target",
+				"Vent Target",
+				"Fill Venting Target",
+				"Pinhole Venting Target",
+				"Main Valve Target",
 				"Heater State",
-				"Valve Filling State",
-				"Valve Main Valve State",
-				"Valve Fill Cart Venting State",
-				"Valve Pinhole Venting State",
+				"Vent State",
+				"Fill Venting State",
+				"Pinhole Venting State",
+				"Main Valve State",
+				"Main Valve Direction",
 				"SensorSuite Timestamp",
 				"MSP2 Transducer",
 				"Swagelock Transducer",
