--- a/data-example/config-hotfireTest.json
+++ b/data-example/config-hotfireTest.json
@@ -46,6 +46,7 @@
 				"Filling",
 				"Wait For Ignition",
 				"Ignition",
+				"Ignition Burn",
 				"Full Burn",
 				"Final Venting",
 				"Done",
@@ -69,67 +70,61 @@
 		{
 			"name": "Ready",
 			"data": 7,
-			"availableStates": [2, 10],
-			"successStates": [3, 4, 5, 6, 7, 8, 9, 11]
+			"availableStates": [2, 11],
+			"successStates": [3, 4, 5, 6, 7, 8, 9, 11, 12]
 		},
 		{
 			"name": "Start Filling",
 			"data": 0,
-			"availableStates": [3, 10],
-			"successStates": [4, 5, 6, 7, 8, 9, 11]
+			"availableStates": [3, 11],
+			"successStates": [4, 5, 6, 7, 8, 9, 11, 12]
 		},
 		{
 			"name": "Stop Filling",
 			"data": 1,
 			"availableStates": [4],
-			"successStates": [5, 6, 7, 8, 9, 10, 11]
+			"successStates": [5, 6, 7, 8, 9, 10, 11, 12]
 		},
 		{
 			"name": "Ignition",
 			"data": 2,
-			"availableStates": [5, 10],
-			"successStates": [6, 7, 8, 9, 11]
+			"availableStates": [5, 11],
+			"successStates": [6, 7, 8, 9, 11, 12]
+		},
+		{
+			"name": "Ignition Burn",
+			"data": 11,
+			"availableStates": [6],
+			"successStates": [8, 9, 11, 12]
 		},
 		{
 			"name": "Final Venting",
 			"data": 3,
-			"availableStates": [7, 10, 11],
-			"successStates": [8, 9, 10, 11]
+			"availableStates": [7, 11, 12],
+			"successStates": [8, 9, 10, 11, 12]
 		},
 		{
 			"name": "Done",
 			"data": 4,
-			"availableStates": [8],
-			"successStates": [9, 10, 11]
+			"availableStates": [9],
+			"successStates": [9, 10, 11, 12]
 		},
 		{
 			"name": "Abort!",
 			"data": 5,
-			"availableStates": [3, 4, 5, 6, 7],
-			"successStates": [10, 11]
+			"availableStates": [3, 4, 5, 6, 7, 8],
+			"successStates": [10, 11, 12]
 		},
 		{
 			"name": "Servo Control",
 			"data": 6,
-			"availableStates": [2, 3, 4, 5, 6, 7, 8, 9],
-			"successStates": [12]
-		},
-		{
-			"name": "Heater On",
-			"data": 8,
-			"availableStates": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],
-			"successStates": []
-		},
-		{
-			"name": "Heater Off",
-			"data": 9,
-			"availableStates": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],
-			"successStates": []
+			"availableStates": [2, 3, 4, 5, 6, 7, 8, 9, 10],
+			"successStates": [13]
 		},
 		{
 			"name": "Restart Logs",
 			"data": 10,
-			"availableStates": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],
+			"availableStates": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13],
 			"successStates": []
 		}
 	]
