Update config with more pressure sensors

--- a/data-example/config-hotfireTest.json
+++ b/data-example/config-hotfireTest.json
@@ -21,12 +21,14 @@
 				"Main Valve Min Limit",
 				"Main Valve Max Limit",
 				"SensorSuite Timestamp",
-				"MSP2 Transducer",
-				"Swagelock Transducer",
+				"Pressure 1",
+				"Pressure 2",
+				"Pressure 3",
 				"Tank Transducer",
 				"Thrust Transducer",
 				"Digital Inputs",
 				"DAQ Sample Count",
+				"DAQ Sample Count 2",
 				"Temp 1",
 				"Temp 2",
 				"Temp 3",
